# lookit-jspsych

./: .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .readthedocs.yml  Procfile  README.md  eslint.config.mjs  jest.cjs  makefile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  rollup-dev.mjs  rollup.mjs  tsconfig.json
.changeset/: beige-horses-beam.md  blue-seals-warn.md  calm-lizards-wink.md  calm-tomatoes-warn.md  clever-beans-brake.md  cold-chairs-confess.md  cold-rules-dream.md  config.json  curly-pumpkins-clean.md  eager-poets-switch.md  early-seahorses-brush.md  gold-tips-melt.md  hip-drinks-pump.md  itchy-books-judge.md  khaki-bobcats-pump.md  khaki-flowers-prove.md  large-deers-deny.md  large-rabbits-matter.md  large-schools-talk.md  lazy-bobcats-check.md  many-onions-pump.md  mean-eagles-retire.md  mean-llamas-cheat.md  mighty-islands-collect.md  modern-suits-grab.md  moody-points-cheat.md  nasty-eagles-play.md  nice-hats-sing.md  olive-rats-return.md  orange-trees-battle.md  plenty-carpets-yell.md  poor-walls-relate.md  purple-phones-count.md  quiet-emus-help.md  rotten-cars-swim.md  shaggy-toes-swim.md  sharp-fishes-peel.md  sharp-toes-learn.md  shiny-walls-refuse.md  shy-cobras-flow.md  (+18 more)
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
_custom_theme/: main.html
_custom_theme/css/: jspsych_docs.css
tests/: exit_survey_parameters.js  survey_consent_no_recording.js  video_consent_parameters.js  video_consent_session_recording.js  video_consent_trial_recording.js
